app/Connector/packages/connector-theme/sass/var/panel/_Selector.scss
/* Connector.view.Selector */

.x-window-body-axiswindow {
  border: 0!important;
  background: $white!important;
}

.x-window-axiswindow {
  border: 0!important;
  @include prefixer(box-shadow, 0 1px 0 0 $black!important);
}

.variable-selector {
  .header {
    background-color: $white;
    padding: 24px;
    border-top: 4px solid $action-red;


    .main-title {
      @include dialogheader;
      font-size: 12px;
      text-transform: uppercase;
    }

    .sub-title {
      margin-top: 24px;
      height: 28px;
      line-height: 28px;

      span {
        display: block;
        float: left;
      }

      .subject-count {
        position: absolute;
        right: 28px;
        bottom: 24px;
        color: $heat-scale-2;
        font-weight: bold;
      }

      .nav-text {
        height: 28px;
        line-height: 28px;
        color: $gray-3;
        font-size: 12px;
        text-transform: uppercase;
        font-weight: 400;
        font-family: $info-font;
      }

      .back-action {
        color: $gray-3;
        font-size: 12px;
        text-transform: uppercase;
        min-width: 84px;
        padding-left: 24px;

        .arrow {
          background-image: url(images/navigatebackward.svg);
          width: 56px;
          height: 56px;
          display: block;
          position: absolute;
          top: 48px;
          left: 12px;
        }

        &:hover {
          cursor: pointer;
        }
      }

      .section-title,
      .section-title-filtered {
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
        padding-left: 20px;
        color: $black;
        font-size: 24px;
        height: 28px;
        line-height: 28px;
        width: 80%!important;
        @include header;
      }
    }
  }

  .footer {
    background-color: $black!important;
    padding: 8px;
  }

  .content {
    background-color: $white;
    padding: 24px;

    .look-disabled {
      color: $heat-scale-3;
    }

    .content-grouping, .content-category {
      font-size: 11px;
      font-weight: bold;
      color: $heat-scale-2;
      padding: 8px;
    }

    .content-grouping.extrapadding {
      padding-top: 24px;
    }

    .content-category.content-line {
      margin-top: 16px;
      padding-top: 16px;
      border-top: solid $heat-scale-6 1px;
    }

    .content-item {
      height: 25px;
      padding: 7px 8px 0 8px;
      font-family: $info-font;

      .content-label {
        display: inline-block;
        width: 85%;
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
      }

      .content-count {
        display: inline-block;
        float: right;
      }

      &:hover {
        background-color: $select-hover-color;
        cursor: pointer;
      }
    }

    .content-selected, .content-selected:hover {
      background-color: $select-color;
      color: $gray-7;
    }
  }

  .content-multiselect {
    background-color: $white;
    padding-top: 10px;
    padding-left: 40px;

    .x-grid-header-ct, .x-grid-with-row-lines {
      padding-right: 40px;
    }

    .x-column-header-over {
      background-color: transparent;
      background-image: none;
    }

    .x-grid-body {
      border-color: transparent;
    }

    .x-grid-group-hd {
      border: none;
      padding: 0;
    }

    .x-grid-row .x-grid-cell {
      border-color: transparent !important;
      font-family: $info-font;
      background: $white;
    }

    .x-grid-row-over .x-grid-td,
    .x-grid-row-selected .x-grid-td {
      background-color: $white !important;
    }

    .x-grid-view {
      background-color: $white;
    }

    .checker-disabled {
      opacity: 0.5;
    }

    .content-grouping {
      font-size: 11px;
      font-weight: bold;
      color: $heat-scale-2;
      padding: 24px 0 8px 30px;
    }

    .content-header {
      border-right-color: transparent;
      border-bottom: solid $heat-scale-6 1px;
      font: normal 12px $info-font;

      .x-column-header-text {
        font-size: 12px;
        text-transform: none;
        font-weight: normal;
        color: $primary-text-color;
      }

      .x-column-header-over {
        background-color: $select-hover-color;
      }
    }
  }

  .advanced {
    background-color: $gray-7;
    border-top: solid $gray-6 2px;

    .x-panel-body {
      background-color: transparent;
      padding: 18px 48px;

      .x-fieldset {
        padding: 0;
      }

      .field-label {
        display: inline-block;
        color: $heat-scale-1;
        width: 35%;
        vertical-align: middle;
      }

      .field-display {
        display: inline-block;
        background-color: #FFFFFF;
        width: 65%;
        padding: 8px 8px 7px 8px;
        border: 1px solid $gray-5;
        border-radius: 2px;
        cursor: pointer;

        .main-label {
          display: inline-block;
          color: $black;
          width: 85%;
          vertical-align: bottom;

          text-overflow: ellipsis;
          white-space: nowrap;
          overflow: hidden;

          .sub-value {
            color: $heat-scale-2;
          }
        }

        .empty {
          color: $interactive-color;
        }

        .icon {
          width: 16px;
          height: 16px;
          float: right;
          background-image: url(images/dropdown_normal.svg);
          background-size: 16px;
          background-repeat: no-repeat;

          &:hover {
            background-image: url(images/dropdown_hover.svg);
          }
        }
      }

      .expanded {
        .field-display {
          border-radius: 2px;

          .icon {
            background-image: url(images/dropdown_hover.svg);
          }
        }


      }

      .hierarchical .field-display .icon {
        background-image: url(images/navigateforward.svg);
        height: 56px;
        width: 56px;
        position: absolute;
        top: -12px;
        right: -12px;
        background-size: 100%;
        display: block;
      }

      .display-option-only .field-display {
        cursor: default;

        .icon {
          background-image: none;
        }
      }

      .dimension-header {
        color: $heat-scale-1;
        font-size: 11px;
        font-weight: bold;
        padding-bottom: 10px;
      }
    }
  }

  .hierarchy-pane {
    .x-panel-body {
      overflow-y: auto;
    }

    .content {
      .x-form-checkboxgroup-body {
        padding: 0;
      }

      .col-title, .col-check {
        width: 100%;
        white-space: nowrap;
      }

      .col-check, .col-spacer, .col-count {
        height: 26px;
      }

      .col-count {
        padding: 5px 4px 0 0;
        text-align: right;
      }

      .col-disable {
        color: $placeholder-text-color;
      }

      .col-line {
        border-top: solid $heat-scale-6 1px;
      }

      .col-title {
        font-size: 11px;
        font-weight: bold;
        color: $heat-scale-2;
        padding-bottom: 16px;
      }

      .col-count-title {
        margin-left: -18px;
      }

      .col-check .x-form-cb-label {
        width: 90%; // 100% does not induce ellipsis text-overflow, also need to reserve 10% for checkbox
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;

        &:hover {
          width: 100%;
          text-overflow: initial;
        }
      }
    }
  }
}

.advanced-dropdown {
  border-width: 1px;
  border-style: solid;
  border-color: $heat-scale-3 !important;

  .x-panel-body {
    background-color: transparent;

    .field-display {
      width: 100%;
      padding: 8px 16px 7px 16px;
      cursor: pointer;
    }

    .body-panel {
      border-top: 1px solid $gray-7;
      background-color: $white;
      padding: 8px 0 8px 16px;

      .cb-all-panel, .cb-panel, .radio-panel {
        margin-bottom: 0;
      }

      .cb-all-panel {
        margin-left: 4px;
      }

      .cb-all-panel .x-form-cb-label-after, .cb-panel .x-form-cb-label-after {
        padding-left: 8px;
      }

      .radio-panel .x-form-cb-label-after {
        margin-left: 8px;
      }

      .look-disabled {
        color: $heat-scale-2;
      }
    }
  }
}


.x-grid-td {
  background-color: $gray-7;
}

.checkbox2 .x-form-checkbox {
  background-image: url(images/form/checkbox2.gif);
}

